# zectl

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  LICENSE  README.md  notes.md  sgdb
.travis/ubuntu/: setup_zfs_requirements.sh
CMakeModules/: FindCheck.cmake  FindZFS.cmake
data/zcp/: get_props.lua  list.lua
docs/: BUILDING.md  CMakeLists.txt  SYSTEM_SETUP.md  zectl.8  zectl.8.scd
docs/plugins/: README.md  systemdboot.md
grub.d/: 05_zfs_linux.py  CMakeLists.txt  grub_generator.c  grub_generator.cpp
include/libze/: bootloader.h  libze.h  libze_plugin_manager.h  libze_util.h
include/libze_plugin/: libze_plugin_grub.h  libze_plugin_systemdboot.h
include/libze_util/: libze_util.h
include/util/: util.h
include/ze_util/: ze_util.h
lib/: CMakeLists.txt  common.h  util.c  util.h  zfs.c  zfs.h
lib/bootloader/: systemdboot.c
lib/libze/: CMakeLists.txt  libze.c  libze_bootloader.c  libze_plugin_manager.c  libze_util.c  system_linux.c  system_linux.h
lib/libze/bootloader/: bootloader.c  systemdboot.c
lib/libze_plugin/: CMakeLists.txt  libze_plugin_grub.c  libze_plugin_systemdboot.c
lib/libze_util/: CMakeLists.txt  libze_util.c
lib/util/: CMakeLists.txt  util.c  ze_util.c
packaging/arch/: PKGBUILD  PKGBUILD-git
packaging/debian/: changelog  control  copyright  rules
scripts/: file_to_header.sh  file_to_lua_list.sh
src/: CMakeLists.txt  common.h  libze.c  libze.h  system_linux.c  system_linux.h  util.c  util.h  zectl.c  zectl.h  zectl_activate.c  zectl_create.c  zectl_destroy.c  zectl_get.c  zectl_list.c  zectl_mount.c  zectl_rename.c  zectl_set.c  zectl_snapshot.c  zectl_umount.c  zectl_unmount.c  zectl_util.c  zectl_util.h  zfs.c  zfs.h
tests/: CMakeLists.txt  zectl_tests.c  zectl_tests.h
